# 2021fa-420-nullptr

./: .gitignore  .gitmodules  CLI.cpp  CLI.hpp  CLITest.cpp  CLIView.cpp  CLIold.cpp  CMakeLists.txt  README.md  State.cpp  Tests.cpp  UMLAttribute.cpp  UMLAttribute.hpp  UMLCLI.cpp  UMLClass.cpp  UMLClass.hpp  UMLData.cpp  UMLData.hpp  UMLDataHistory.cpp  UMLField.cpp  UMLFile.cpp  UMLFile.hpp  UMLMethod.cpp  UMLParameter.cpp  UMLParameter.hpp  UMLRelationship.cpp  UMLRelationship.hpp  UMLServer.cpp  USER_GUIDE.md  help.txt  helpCLI.txt  helpGUI.html  helpGUI.txt  main.cpp  patterns.txt  server.hpp  umldiagram.json
.github/workflows/: cmake.yml
include/: CLI.hpp  CLIView.hpp  CLIold.hpp  State.hpp  UMLAttribute.hpp  UMLCLI.hpp  UMLClass.hpp  UMLData.hpp  UMLDataHistory.hpp  UMLField.hpp  UMLFile.hpp  UMLMethod.hpp  UMLParameter.hpp  UMLRelationship.hpp  UMLServer.hpp
include/httplib/: CMakeLists.txt  httplib.h
include/inja/: CMakeLists.txt  inja.hpp
include/json/: CMakeLists.txt
static/: diagram.js  panzoom.js  sidebar.js  style.css  svg.draggable.js
templates/: index.html  index.html.old  test.html
umllib/: CLITest.cpp  UMLAttribute.cpp  UMLCLI.cpp  UMLClass.cpp  UMLData.cpp  UMLDataHistory.cpp  UMLMethod.cpp  UMLRelationship.cpp  UMLServer.cpp
umllib/include/: CLITest.hpp  UMLCLI.hpp  UMLClass.hpp  UMLData.hpp  UMLFile.hpp  UMLMethod.hpp  UMLRelationship.hpp  UMLServer.hpp
